# Just-Another-Mips-Editor-and-Simulator

./: Cargo.toml  README.md  double.s
docs/: index.html  simulator.js  simulator_bg.wasm
scripts/: bitter.s  branch_test.s  double.s  loop.s  message.s  slt.s  test.s
src/: app.rs  lib.rs  machine.rs  main.rs  memory.rs  parser.rs  pipeline.rs  register.rs  syscall.rs
src/app/: console.rs  editor.rs  memory.rs  pipeline_view.rs  run_menu.rs  watches.rs
src/parser/: directives.rs  instruction.rs  label.rs  model.rs  numbers.rs  opcode.rs  register.rs
src/parser/model/: instruction.rs  opcode.rs
src/stages/: decode.rs  execute.rs  fetch.rs  memory.rs  writeback.rs
