[package]
name = "simulator"
version = "0.1.0"
authors = ["James Pruitt <jamescpruitt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
#serde = { version = "1", features = ["derive"]}

[dependencies]
futures = "0.3.19"
thiserror = "1.0.29"
anyhow = "1.0.45"
clap = "2.33.3"
nom = "7.1.0"
num = "0.4.0"
eframe = "0.16.0"
rfd = "0.8.1"

[features]
default = ["persistence"]
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
